# Machi-Koro-Cpp

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  config.json  docker-compose.yml  generate_sources-unix.bat  main.cc  main.cpp  nginx.conf
cmake/: clang-format.cmake  sources.cmake
controllers/: addPlayerController.cpp  addPlayerController.h  clear_game_controller.cpp  clear_game_controller.h  createGameController.cpp  create_game_controller.cpp  create_game_controller.h  in_memory_repository.cpp  in_memory_repository.h  init_game_controller.cpp  init_game_controller.h  roll_dice_controller.cpp  roll_dice_controller.h  startGame.cpp  startGame.h  startGameController.cpp  startGameController.h  utils.cpp  utils.h
docs/: MachiKoro.asta  hello_world.md
include/: bank.h  player.h
loggers/: logger.cpp  logger.h  logger_base.h  logger_impl.cpp  logger_impl.h
models/: CMakeLists.txt  architecture_market.cpp  architecture_market.h  bank.cpp  bank.h  building.cpp  building.h  card.cpp  card.h  dice.cpp  dice.h  dice_base.h  dice_impl.cpp  dice_impl.h  game_repository.cpp  game_repository.h  general_building.h  hand.cpp  hand.h  important_building.h  initial_building.cpp  initial_building.h  landmark.h  machikoro_game.cpp  machikoro_game.h  player.cpp  player.h
models/card/: amusement_park.cpp  amusement_park.h  apple_orchard.cpp  apple_orchard.h  bakery.cpp  bakery.h  building.cpp  building.h  business_center.cpp  business_center.h  cafe.cpp  cafe.h  card.cpp  card.h  cheese_factory.cpp  cheese_factory.h  convenient_store.cpp  convenient_store.h  family_restaurant.cpp  family_restaurant.h  forest.cpp  forest.h  fruit_and_vegetable_market.cpp  fruit_and_vegetable_market.h  furniture_factory.cpp  furniture_factory.h  landmark.cpp  landmark.h  mine.cpp  mine.h  radio_tower.cpp  radio_tower.h  ranch.cpp  ranch.h  shopping_mall.cpp  shopping_mall.h  stadium.cpp  stadium.h  train_station.cpp  train_station.h  (+4 more)
models/cards/: amusement_park.cpp  amusement_park.h  apple_orchard.cpp  apple_orchard.h  bakery.cpp  bakery.h  building.cpp  building.h  business_center.cpp  business_center.h  cafe.cpp  cafe.h  card.cpp  card.h  cheese_factory.cpp  cheese_factory.h  convenient_store.cpp  convenient_store.h  family_restaurant.cpp  family_restaurant.h  forest.cpp  forest.h  fruit_and_vegetable_market.cpp  fruit_and_vegetable_market.h  furniture_factory.cpp  furniture_factory.h  landmark.cpp  landmark.h  mine.cpp  mine.h  radio_tower.cpp  radio_tower.h  ranch.cpp  ranch.h  shopping_mall.cpp  shopping_mall.h  stadium.cpp  stadium.h  train_station.cpp  train_station.h  (+4 more)
models/events/: clear_game_event.h  create_game_event.h  domain_event.h  event.h  event_player.h  init_game_event.cpp  init_game_event.h  roll_dice_event.cpp  roll_dice_event.h
models/include/: building.h  machikoro_game.h
models/src/: bank.cpp  general_building.cpp  machikoro_game.cpp  main.cpp  player.cpp
models/tests/: mock_dice.h
presenters/: clear_game_present.cpp  clear_game_present.h  create_game_present.cpp  create_game_present.h  init_game_present.cpp  init_game_present.h  presenter.h  roll_dice_present.cpp  roll_dice_present.h
repos/: memory_repository.cpp  memory_repository.h  repository.h
resource/: MachiKoro.asta
src/: architecture_market.cpp  important_building.cpp  landmark.cpp  main.cpp
test/: CMakeLists.txt  machikoro_game_test.cpp  test_main.cc
test/e2e_test/: CMakeLists.txt  game_setup_e2etest.cpp  machikoro_game_test.cpp  test_main.cc
test/game_unittest/: game_unittest.cpp
test/unittest/: CMakeLists.txt  game_unittest.cpp  operate_effect_unittest.cpp
tests/e2e_test/: e2e_create_game.cpp  e2e_init_game.cpp  e2e_main.cpp  e2e_rolldice.cpp  test_def.h
tests/unittest/: unit_game.cpp  unit_operate_effect.cpp
usecases/: clear_game.cpp  clear_game.h  common.cpp  common.h  createGameUsecase.cpp  createGameUsecase.h  create_game.cpp  create_game.h  create_game_usecase.cpp  create_game_usecase.h  game_repository.cpp  game_repository.h  init_game.cpp  init_game.h  presenter.h  roll_dice.cpp  roll_dice.h  roll_dice_usecase.cpp  roll_dice_usecase.h
utils/: util.cpp  util.h  util_base.h  util_impl.cpp  util_impl.h
views/: index.html
